# gitissueschat

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
gitissueschat/: __init__.py  github_issues.py  main.py
gitissueschat/chainlit_app/: chainlit.md  chainlit_app.py  run_chainlit_app.py
gitissueschat/embed/: __init__.py  chroma_database.py  embed_database_to_chromadb.py  google_vertex_embedding_function.py  llamaindex_chunker.py
gitissueschat/rag/: __init__.py  chroma_retriever.py  cli.py  gemini_generator.py  rag_orchestrator.py
gitissueschat/scripts/: analyze_chunks.py  chunk_database_processor.py  chunk_processor.py  compare_chunkers.py  debug_chroma_query.py  embed_chunks.py  fetch_repo.py  migrate_db.py  query_embeddings.py  simple_chroma_query.py  test_chunking.py  test_embed_database.py  test_embedding.py  test_faiss_query.py  test_gemini_api.py  test_long_comment.py  test_process_repository.py  test_rag.py  test_rag_detailed.py  test_resumable_processing.py  test_update_repository.py  view_retrieved_chunks.py
gitissueschat/sqlite_storage/: __init__.py  api_log_manager.py  connection_manager.py  issue_manager.py  repository_manager.py  sqlite_storage.py
gitissueschat/streamlit_app/: README.md  app.py  run_streamlit_app.py
gitissueschat/utils/: README_process_repository.md  README_update_repository.md  db_path_manager.py  process_repository.py  update_repository.py
